2013-04-08 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  STM8: Implement more comparisons, stack handling fix.
	* src/SDCCsymt.c:
	  STM8: Allow returning long long (not implemented in code genration yet).

2013-04-08 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  STM8: Stack adjustment fixes, signed cast fix, ifx fix, GET_VALUE_AT_ADDRESS fix.

2013-04-08 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  STM8: Implement cast to _Bool.
	* device/include/sdcc-lib.h,
	  device/include/asm/stm8/features.h:
	  STM8: Port feature header.
	* device/include/math.h,
	  device/include/stdarg.h:
	  STM8: Port feature configuration.

2013-04-07 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  STM8: Allow more operand types in Ifx, implement more casts.

2013-04-06 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  STM8: Fixes for stack pointer handling.

2013-04-06 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/regression/tests/literalop.c,
	  support/regression/tests/bitwise.c: Fix host regression failues on
	  64-bit PowerPC
	* support/regression/tests/align.c: do not include stdalign.h on
	  hosts that do not support it

2013-04-06 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  STM8: Implement comparison for more operand types.

2013-04-02 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCC.lex,
	  src/SDCC.y,
	  src/SDCCerr.h,
	  src/SDCCerr.c,
	  src/SDCCsymt.h,
	  src/SDCCsymt.c,
	  src/SDCCicode.c,
	  src/SDCCval.h,
	  src/SDCCval.c,
	  src/port.h:
	  src/*/main.c:
	  doc/sdccman.lyx,
	  support/regression/tests/assert.c,
	  support/regression/tests/align.c:
	  Support for C11 _Static_assert static assertions and _Alignas alignment specifiers.

2013-04-01 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCsymt.c,
	  src/stm8/gen.c,
	  src/stm8/main.c:
	  STM8: Implement on-stack register passing, taking addresses of on-stack variables, handling of on-stack parameter operands.
