@@ -1,6 +1,11 @@
 2013-04-08 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/stm8/gen.c:
+	  STM8: Implement integer unary minus.
+
+2013-04-08 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/stm8/gen.c:
 	  STM8: Implement more comparisons, stack handling fix.
 	* src/SDCCsymt.c:
 	  STM8: Allow returning long long (not implemented in code genration yet).
